interactive-rating-component/src/style.css
:root {
  --Orange: hsl(25, 97%, 53%);
  --White: hsl(0, 0%, 100%);
  --Light-Grey: hsl(217, 12%, 63%);
  --Medium-Grey: hsl(216, 12%, 54%);
  --Dark-Blue: hsl(213, 19%, 18%);
  --Very-Dark-Blue: hsl(216, 12%, 8%);
  --Card-Bg: linear-gradient(
    to bottom left,
    hsl(215deg, 17%, 15%),
    hsl(215deg, 27%, 12%)
  );
}

/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
/*
  2. Remove default margin
*/
* {
  margin: 0;
  padding: 0;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/*
  3. Allow percentage-based heights in the application
*/
html,
body {
  height: 100%;
}
/*
  Typographic tweaks!
  4. Add accessible line-height
  5. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
  6. Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
  7. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
  font: inherit;
}
/*
  8. Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* remove animations for people who've turned them off */
@media (prefers-reduced-motion: reduce) {
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* utility classes */

.visually-hidden {
  position: absolute !important;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

/* Main styles */

body {
  font-family: 'Overpass', sans-serif;
  background-color: var(--Very-Dark-Blue);
  min-height: 100vh;
  color: var(--White);
}

#app {
  max-width: 80rem;
  margin: 0 auto;
  display: grid;
  min-height: 100vh;
  place-items: center;
  padding-inline: clamp(0.75rem, calc(0.75rem + 2vw), 2rem);
}

.container {
  border-radius: 1.25rem;
  min-height: 20rem;
  width: clamp(3rem, 100%, 26rem);
}

@media screen and (min-width: 768px) {
  .container {
    min-height: 26rem;
  }
}

.card {
  position: relative;
  width: 100%;
  height: 100%;
  transition: transform 1000ms;
  transform-style: preserve-3d;
}
.rating-card{
  gap: 1.5rem;
}

.thanks-card{
  gap: 1rem;
}

.rating-card,
.thanks-card {
  position: absolute;
  backface-visibility: hidden;
  background: var(--Card-Bg);
  padding: clamp(1.5rem, calc(0.75rem + 1.5vw), 2.5rem);
  border-radius: 1.25rem;
}

@media screen and (min-width: 768px) {
  .rating-card,
  .thanks-card {
    border-radius: 2rem;
  }
}

/* General card styles */


.rating-card {
  display: grid;
}

.thanks-card {
  display: grid;
  place-items: center;
  text-align: center;
  transform: rotateY(180deg);
}

.rating-card[data-visible='true'],
.thanks-card[data-visible='true'] {
  display: grid;
}

.rating-card[data-visible='false'],
.thanks-card[data-visible='false'] {
  display: none;
}

.rotate {
  transform: rotateY(180deg);
}

.thanks-card__result {
  background-color: var(--Dark-Blue);
  border-radius: 2rem;
  padding: 0.3rem 0.9rem 0.1rem 0.9rem;
  color: var(--Orange);
  display: flex;
}

/* Card content styles */

.star-icon {
  border-radius: 50%;
  display: grid;
  width: 2.5rem;
  height: 2.5rem;
  place-content: center;
  background-color: var(--Dark-Blue);
}
.thanks-icon {
  height: 6rem;
}

@media screen and (min-width: 768px) {
  .star-icon {
    width: 3rem;
    height: 3rem;
  }
}

.card__title {
  font-weight: 700;
  font-size: clamp(1.25rem, calc(1rem + 1.5vw), 1.75rem);
}

.card__text {
  margin-top: 0.75rem;
  color: var(--Light-Grey);
  font-size: 0.875rem;
}

@media screen and (min-width: 768px) {
  .card__text {
    font-size: 1rem;
  }
}

.rating-card__form {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.rating-card__fieldset {
  border: none;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.rating-card__label {
  width: 2.5rem;
  height: 2.5rem;
  padding-top: 0.2rem;
  border-radius: 50%;
  background-color: var(--Dark-Blue);
  position: relative;
  display: grid;
  place-content: center;
  cursor: pointer;
  transition: color 300ms ease-in-out, background-color 300ms ease-in-out;
  color: var(--Light-Grey);
  font-size: 0.875rem;
}

.rating-card__label:hover {
  color: var(--White);
  background-color: var(--Orange);
  transition: color 300ms ease-in-out, background-color 300ms ease-in-out;
}

.rating-card__label:has(.rating-card__input:focus-visible) {
  outline: 2px solid var(--Orange);
  outline-offset: 2px;
}

.rating-card__label:has(.rating-card__input:checked) {
  background-color: var(--Light-Grey);
  color: var(--White);
}

@media screen and (min-width: 32.5em) {
  .rating-card__label {
    width: 3.125rem;
    height: 3.125rem;
    font-size: 1rem;
  }
}

.rating-card__input {
  appearance: none;
  width: 100%;
  height: 100%;
  z-index: -1;
  position: absolute;
  top: 0;
  left: 0;
}

.btn {
  background-color: var(--Orange);
  color: var(--White);
  cursor: pointer;
  border: none;
  outline: transparent;
  padding: 0.75rem 2rem;
  border-radius: 2rem;
  text-transform: uppercase;
  transition: color 300ms ease-in-out, background-color 300ms ease-in-out;
  letter-spacing: 0.2ch;
  font-weight: 700;
  width: 100%;
}

.btn:hover {
  background: var(--White);
  color: var(--Orange);
  transition: color 300ms ease-in-out, background-color 300ms ease-in-out;
}

.btn:focus-visible {
  outline-offset: 2px;
  color: var(--Orange);
  background: var(--White);
  outline: 2px solid var(--Orange);
}

